Fixed some small alignments issues for landscape mode of small devices

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -281,8 +281,126 @@ body {
   background-color: yellow;
   color: rgb(6, 6, 44);
 }
-
 @media screen and (max-width: 800px) {
+  .profileImage {
+    margin: 50px 0px 0px 0px;
+    width: 150px;
+  }
+  .nav {
+    height: 40px;
+  }
+
+  .li {
+    font-size: 1rem;
+  }
+
+  .h2Style {
+    font-size: 1.5rem;
+  }
+  .h1Style {
+    font-size: 2rem;
+    margin-bottom: 10px;
+  }
+  .skillHeading {
+    padding: 40px 0px 0px 20px;
+    font-size: 2rem;
+  }
+
+  .skillOptions {
+    padding: 2px 0px;
+  }
+
+  .skillNames {
+    display: inline-block;
+    border: solid chartreuse;
+    border-radius: 30px;
+    color: chartreuse;
+    padding: 3px 20px;
+    margin: 10px;
+    font-size: 0.9rem;
+  }
+
+  .myInfo {
+    padding: 5px;
+    width: 90%;
+    font-size: 0.8rem;
+    color: chartreuse;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    word-spacing: 2px;
+  }
+  .scrollDown {
+    width: 80%;
+    padding: 5px;
+    text-align: right;
+  }
+
+  .btn {
+    padding: 5px;
+    font-size: 0.8rem;
+  }
+
+  .projectHeading {
+    font-size: 2rem;
+    padding: 0px 20px 0px 0px;
+    margin: 40px 0px 0px 0px;
+  }
+  .projectBody {
+    width: 100%;
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
+  .projectWrapper {
+    width: 100%;
+    height: 500px;
+    border: solid yellow;
+    display: flex;
+    flex-direction: column;
+    text-decoration: none;
+    box-shadow: 4px 4px yellowgreen;
+    transition: box-shadow 0.4s;
+    font-family: "Courier New", Courier, monospace;
+  }
+
+  .projectWrapper:hover {
+    box-shadow: 10px 10px 4px yellowgreen;
+  }
+
+  .projectImage {
+    width: 100%;
+    height: 60%;
+  }
+
+  .projectInfo {
+    width: 100%;
+    height: 40%;
+    padding: 10px;
+    color: yellow;
+  }
+
+  .name {
+    font-size: 1rem;
+  }
+  .info {
+    font-size: 0.8rem;
+    font-weight: 400;
+  }
+
+  .techs {
+    display: inline-block;
+    border: solid yellow;
+    border-radius: 30px;
+    color: yellow;
+    font-size: 0.5rem;
+    padding: 5px 5px;
+    margin: 5px 2px 2px 2px;
+  }
+}
+
+@media screen and (max-width: 600px) {
   .s1 {
     display: flex;
     flex-direction: column-reverse;
@@ -325,6 +443,7 @@ body {
   }
   .h1Style {
     font-size: 2rem;
+    margin-bottom: 10px;
   }
   .skillHeading {
     padding: 40px 0px 0px 20px;
@@ -423,3 +542,25 @@ body {
     margin: 5px 2px 2px 2px;
   }
 }
+
+/* @media screen and (max-height: 300px) {
+  .right {
+    width: 100%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-size: 2rem;
+     border: solid blue; 
+  } 
+  .left {
+    width: 100%;
+    height: 50%;
+    border: solid red;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+} */
